<resources>
    <string name="app_name">Homework Organizer</string>
    <string name="to_do">To Do</string>
    <string name="subject">Subject:</string>
    <string name="dueDate">Due Date:</string>
    <string name="assignment">Assignment:</string>
    <string name="completed">Completed</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="addNew">Add New Assignment</string>
    <string name="addNewLabel">New</string>
    <string name="brainBreak">Brain Break</string>
    <string name="cats">Detox Your Brain With Cats!!!!</string>
    <string name="setTimer">Set 5 Minute Timer</string>
    <string name="share">Share The Love</string>
    <string name="newCat">New Cat</string>
    <string name="message">Check out this cat I found!</string>
    <string-array name="dueDate">
        <item>Any Time</item>
        <item>Today</item>
        <item>This Week</item>
    </string-array>
    <string-array name="subjects">
        <item>All</item>
    </string-array>
</resources>
