<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="7dp"
    tools:context=".AddNewAssignment">

    <TextView
        android:id="@+id/addNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNew"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNew">

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueDate"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dateTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="mm/dd/yyyy"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/assignmentInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateInput">

        <TextView
            android:id="@+id/assignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assignment"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/assignmentTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Assignment"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/assignmentInput">

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/clear"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>